--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quadro de Horario</title>
   </head>
-  <body class="antialiased min-h-screen w-full">
+  <body class="antialiased min-h-[100dvh] w-full">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
